# lcode3d

./: .gitignore  .gitlab-ci.yml  .mailmap  CONTRIBUTING.md  LICENSE.txt  README.md  __main__.py  config.example.py  config.py  config_example.py  error_compensation.npz  lcode.py  lcode.spec  requirements.txt  setup.cfg  setup.py  setup_hooks.py  shell.nix
configs/: awakeish.cfg.py  awakeish2.cfg.py  benchmark1.py  benchmark1_mini.py  classic.cfg.py  mpitest.cfg.py  noise_test.py  orbiter.cfg.py  quick.cfg.py  self_force.cfg.py  single_electron.cfg.py  square_density.cfg.py  stability_test1.py  stability_test1_benchmark.py  threeway_comparison.cfg.py  virt_awakeish.cfg.py  virt_electron_bubble.cfg.py  virtual_plasma.cfg.py  xi_colormaps.cfg.py
docs/: Makefile  OUTLINE.txt  conf.py  contributing.rst  example-config.rst  index-html.rst  index-nonhtml.rst  lcode-source.rst  toc-overview.rst  toc-technicalities.rst  toc-tour.rst  toc-usage.rst  useful-links.rst
docs/overview/: problem.rst  trickery.rst  units.rst  window_and_grids.rst
docs/technicalities/: design_decisions.rst  gpu.rst  grid_sizes.rst  initialization.rst  offsets.rst
docs/tour/: Bz.rst  ExEyBxBy.rst  Ez.rst  background_ions.rst  beam.rst  coarse_and_fine_plasma.rst  deposition.rst  plasma.rst  plasma_pusher.rst  xi_step.rst
docs/usage/: config.rst  installation.rst  running_and_embedding.rst
lcode/: __main__.py  beam_construction.py  beam_depositor.pyx  beam_mover.mako.pyx  beam_particle.pxd  beam_particle.pyx  configuration.py  default_config.py  fields_initial.py  main.py  plasma_construction.py  plasma_particle.pxd  plasma_particle.pyx  plasma_solver.mako.pyx  util.py
lcode/beam/: archive.py  mpi.py  ro_function.py
lcode/diagnostics/: Ez00_peaks.py  beam_portrait.py  force_cut.py  live.py  main.py  orbiter.py  print_Ez_max.py  print_beam_info.py  quick_density.py  transverse_peek.py  xi_colormaps.py
lcode/plasma/: field_solver.mako.pyx  field_solver.pxd  gpu_functions.py  solver_v2.mako.pyx  solver_v2_monolithic.mako.pyx
lcode/plasma/virtual/: fast.mako.pyx  interleaved.py
lcode/tests/: test_beam_depositor.py  test_configuration.py  test_field_solver.py  test_fields_initial.py  test_plasma_construction.py  test_plasma_internals.py  test_plasma_solver.py
misc/dockerfiles/debian8-pyinstaller/: Dockerfile
misc/dockerfiles/debian9-test/: Dockerfile
misc/dockerfiles/manylinux1-package/: Dockerfile
misc/test_against_higher_precision/: Ez_00_high.npy  test_against_higher_precision.py
misc/test_integration/: test_archive.py  test_files.py  test_mpi.py  test_multistep.py
misc/test_source_checks/: LCODE_AGPL_NOTICE  README  pylintrc  test_flake8.py  test_license_check.py  test_pylint.py
trig_mkl/: MANIFEST.in  PKG-INFO  default.nix  setup.py
trig_mkl/trig_mkl/: __init__.pxd  i_malloc.pxd  mkl.pxd  mkl_dfti.pxd  mkl_service.pxd  mkl_trig_transforms.pxd  mkl_types.pxd  trig_mkl.pxd  trig_mkl.pyx
