[metadata]
name = lcode
author = LCODE Team
author-email = team@lcode.info
summary = Particle beam-driven plasma wakefield acceleration simulator
description-file = README.md
home-page = https://lcode.info
license = 'AGPL-v3+'
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Programming Language :: Cython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Topic :: Scientific/Engineering :: Physics
keywords =
    PWFA
    cython
    particle beam
    physics
    plasma
    simulation
    wakefield acceleration

requires-python = >=3.5
setup_requires_dist =
    cython>=0.21
    mako>=1.0
    numpy>=1.8.2
    pbr>=1.9
    setuptools>=20
tests_require =
    cython>=0.21
    nose>=1.0
    pylint>=1.5


[extras]
mpi = mpi4py>=1.3


[entry_points]
console_scripts =
    lcode = lcode.main:main


[build_ext]
pre-hook.annotate = setup_hooks.annotate
#pre-hook.enable_openmp = setup_hooks.enable_openmp
pre-hook.include_numpy = setup_hooks.include_numpy
pre-hook.optimize = setup_hooks.optimize
pre-hook.preprocess_with_mako = setup_hooks.preprocess_with_mako


[extension=lcode.beam_particle]
sources = lcode/beam_particle.pyx

[extension=lcode.plasma_particle]
sources = lcode/plasma_particle.pyx

[extension=lcode.plasma_solver]
sources = lcode/plasma_solver.preprocessed.pyx

[extension=lcode.plasma.solver_v2]
sources = lcode/plasma/solver_v2.preprocessed.pyx

[extension=lcode.plasma.solver_v2_monolithic]
sources = lcode/plasma/solver_v2_monolithic.preprocessed.pyx

[extension=lcode.plasma.field_solver]
sources = lcode/plasma/field_solver.preprocessed.pyx

[extension=lcode.beam_depositor]
sources = lcode/beam_depositor.pyx

[extension=lcode.beam_mover]
sources = lcode/beam_mover.preprocessed.pyx

[extension=lcode.plasma.virtual.fast]
sources = lcode/plasma/virtual/fast.preprocessed.pyx
