[metadata]
name = lcode
author = LCODE Team
author-email = team@lcode.info
summary = Particle beam-driven plasma wakefield acceleration simulator
description-file = README.md
home-page = https://lcode.info
license = 'AGPL-v3+'
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Programming Language :: Cython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Topic :: Scientific/Engineering :: Physics
keywords =
    PWFA
    particle beam
    physics
    plasma
    simulation
    wakefield acceleration

requires-python = >=3.5
setup_requires_dist =
    pbr>=1.9

[entry_points]
console_scripts =
    lcode = lcode:main
